# personiq

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
examples/: direct_uses.py  langgraph_app.py
personiq/: __init__.py  adapter.py  config.py  embeddings.py  extractor.py  injector.py  langgraph_state.py  memory_manager.py  models.py  retriever.py  store.py
tests/: conftest.py  test_adapter.py  test_extractor.py  test_injector.py  test_memory.py  test_memory_manager.py  test_models.py  test_store.py
