[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "personiq"
version     = "0.2.1"
description = "Personalization memory connector for LangChain and LangGraph applications"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }
authors = [
  {name = "Ashwini Bhardwaj", email = "ashwini.10521@gmail.com"}
]

keywords = [
  "langchain", "langgraph", "memory", "personalization",
  "chatbot", "ai", "llm", "rag", "user-memory"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langgraph>=0.1.0",
  "sentence-transformers>=3.0.0",
  "sqlite-vec>=0.1.1",
  "pydantic>=2.0.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
# LLM providers — install the one you use
groq        = ["langchain-groq>=0.1.0"]
openai      = ["langchain-openai>=0.1.0"]
anthropic   = ["langchain-anthropic>=0.1.0"]
ollama      = ["langchain-ollama>=0.1.0"]
huggingface = ["langchain-huggingface>=0.0.3"]
mistral     = ["langchain-mistralai>=0.1.0"]
all         = [
  "langchain-groq>=0.1.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["personiq*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"
